# NeuroLock

./: CMakeLists.txt  Makefile  README.md
docs/: ARCHITECTURE.md
include/: capture.h  config.h  feature_extraction.h  hashing.h  template.h  utils.h
src/: capture.c  feature_extraction.c  hashing.c  main.c  template.c  utils.c
